--- a/W1/Homework_w1.rmd
+++ b/W1/Homework_w1.rmd
@@ -382,5 +382,83 @@ As mentioned in the variable descriptions, MetroAreaCode is missing if an interv
 
 How many states had all interviewees living in a non-metropolitan area (aka they have a missing MetroAreaCode value)? For this question, treat the District of Columbia as a state (even though it is not technically a state).
 
-Tes
+```{r}
+sum(table(CPS$State, is.na(CPS$MetroAreaCode))[,1] == 0)
 
+
+sum(table(CPS$State, is.na(CPS$MetroAreaCode))[,2] == 0)
+
+```
+
+
+
+###Problem 2.4 - Evaluating Missing Values
+
+Which region of the United States has the largest proportion of interviewees living in a non-metropolitan area?
+```{r}
+sort(prop.table(table(CPS$Region, is.na(CPS$MetroAreaCode)),1)[,2], decreasing = TRUE)
+```
+
+
+###Problem 2.5 - Evaluating Missing Values
+
+While we were able to use the table() command to compute the proportion of interviewees from each region not living in a metropolitan area, it was somewhat tedious (it involved manually computing the proportion for each region) and isn't something you would want to do if there were a larger number of options. It turns out there is a less tedious way to compute the proportion of values that are TRUE. The mean() function, which takes the average of the values passed to it, will treat TRUE as 1 and FALSE as 0, meaning it returns the proportion of values that are true. For instance, mean(c(TRUE, FALSE, TRUE, TRUE)) returns 0.75. Knowing this, use tapply() with the mean function to answer the following questions:
+
+Which state has a proportion of interviewees living in a non-metropolitan area closest to 30%?
+
+Which state has the largest proportion of non-metropolitan interviewees, ignoring states where all interviewees were non-metropolitan?
+
+```{r}
+sort(prop.table(table(CPS$State, is.na(CPS$MetroAreaCode)),1)[,2], decreasing = TRUE)
+```
+
+###Problem 3.1 - Integrating Metropolitan Area Data
+
+Codes like MetroAreaCode and CountryOfBirthCode are a compact way to encode factor variables with text as their possible values, and they are therefore quite common in survey datasets. In fact, all but one of the variables in this dataset were actually stored by a numeric code in the original CPS datafile.
+
+When analyzing a variable stored by a numeric code, we will often want to convert it into the values the codes represent. To do this, we will use a dictionary, which maps the the code to the actual value of the variable. We have provided dictionaries MetroAreaCodes.csv and CountryCodes.csv, which respectively map MetroAreaCode and CountryOfBirthCode into their true values. Read these two dictionaries into data frames MetroAreaMap and CountryMap.
+
+How many observations (codes for metropolitan areas) are there in MetroAreaMap?
+
+```{r}
+MetroAreaMap = read.csv("MetroAreaCodes.csv")
+CountryMap = read.csv("CountryCodes.csv")
+str(MetroAreaMap)
+str(CountryMap)
+```
+
+
+###Problem 3.2 - Integrating Metropolitan Area Data
+
+To merge in the metropolitan areas, we want to connect the field MetroAreaCode from the CPS data frame with the field Code in MetroAreaMap. The following command merges the two data frames on these columns, overwriting the CPS data frame with the result:
+
+CPS = merge(CPS, MetroAreaMap, by.x="MetroAreaCode", by.y="Code", all.x=TRUE)
+
+The first two arguments determine the data frames to be merged (they are called "x" and "y", respectively, in the subsequent parameters to the merge function). by.x="MetroAreaCode" means we're matching on the MetroAreaCode variable from the "x" data frame (CPS), while by.y="Code" means we're matching on the Code variable from the "y" data frame (MetroAreaMap). Finally, all.x=TRUE means we want to keep all rows from the "x" data frame (CPS), even if some of the rows' MetroAreaCode doesn't match any codes in MetroAreaMap (for those familiar with database terminology, this parameter makes the operation a left outer join instead of an inner join).
+
+Review the new version of the CPS data frame with the summary() and str() functions. What is the name of the variable that was added to the data frame by the merge() operation?
+
+
+```{r}
+CPS = merge(CPS, MetroAreaMap, by.x="MetroAreaCode", by.y="Code", all.x=TRUE)
+summary(CPS)
+str(CPS)
+```
+
+###Problem 3.3 - Integrating Metropolitan Area Data
+
+Which of the following metropolitan areas has the largest number of interviewees?
+
+```{r}
+head(sort(table(subset(CPS, MetroArea == "Atlanta-Sandy Springs-Marietta, GA" | MetroArea == "Baltimore-Towson, MD" | MetroArea == "Boston-Cambridge-Quincy, MA-NH" | MetroArea == "San Francisco-Oakland-Fremont, CA", select =c(MetroArea))), decreasing = TRUE))
+```
+
+
+###Problem 3.4 - Integrating Metropolitan Area Data
+
+Which metropolitan area has the highest proportion of interviewees of Hispanic ethnicity? Hint: Use tapply() with mean, as in the previous subproblem. Calling sort() on the output of tapply() could also be helpful here.
+
+```{r}
+sort(tapply(CPS$Hispanic, CPS$MetroArea, mean), decreasing = T)[1]
+
+```
