--- a/W4/Homework_w4.rmd
+++ b/W4/Homework_w4.rmd
@@ -1,5 +1,5 @@
 ---
-title: '"The Analytics Edge Week 3"'
+title: '"The Analytics Edge Week 4"'
 author: "Joona Rauhamäki"
 date: "23 kesäkuuta 2016"
 output: html_document
@@ -109,47 +109,159 @@ ROCRperf = performance(ROCRpred, "tpr", "fpr")
 plot(ROCRperf, colorize = T)
 ```
 
+a: "Even though all of the variables are significant, this is a weak predictive model."
 
-```{r}
+## Problem 2.1 - Trees
 
-```
+We will now try out trees. Build a CART tree for voting using all data and the same four treatment variables we used before. Don't set the option method="class" - we are actually going to create a regression tree here. We are interested in building a tree to explore the fraction of people who vote, or the probability of voting. We’d like CART to split our groups if they have different probabilities of voting. If we used method=‘class’, CART would only split if one of the groups had a probability of voting above 50% and the other had a probability of voting less than 50% (since the predicted outcomes would be different). However, with regression trees, CART will split even if both groups have probability less than 50%.
 
-
-```{r}
-
-```
-
-
-```{r}
-
-```
+Leave all the parameters at their default values. You can use the following command in R to build the tree:
+CARTmodel = rpart(voting ~ civicduty + hawthorne + self + neighbors, data=gerber)
+Plot the tree. What happens, and if relevant, why?
 
 
 ```{r}
+library(rpart)
+library(rpart.plot)
 
+CARTmodel = rpart(voting ~ civicduty + hawthorne + self + neighbors, data=voters)
+prp(CARTmodel)
+```
+a:  No variables are used (the tree is only a root node) - none of the variables make a big enough effect to be split on. No variables are used (the tree is only a root node) - none of the variables make a big enough effect to be split on.
+
+
+## Problem 2.2 - Trees
+
+Now build the tree using the command:
+CARTmodel2 = rpart(voting ~ civicduty + hawthorne + self + neighbors, data=gerber, cp=0.0)
+to force the complete tree to be built. Then plot the tree. What do you observe about the order of the splits?
+
+```{r}
+CARTmodel2 = rpart(voting ~ civicduty + hawthorne + self + neighbors, data=voters, cp=0.0)
+prp(CARTmodel2)
+```
+a:  Neighbor is the first split, civic duty is the last. Neighbor is the first split, civic duty is the last. - correct
+
+
+## Problem 2.3 - Trees
+
+Using only the CART tree plot, determine what fraction (a number between 0 and 1) of "Civic Duty" people voted:
+a: 0.31
+
+
+## Problem 2.4 - Trees
+
+
+Make a new tree that includes the "sex" variable, again with cp = 0.0. Notice that sex appears as a split that is of secondary importance to the treatment group.
+
+In the control group, which gender is more likely to vote?
+a: men
+In the "Civic Duty" group, which gender is more likely to vote?
+a: men
+```{r}
+CARTmodel3 = rpart(voting ~ civicduty + hawthorne + self + neighbors + sex, data=voters, cp=0.0)
+prp(CARTmodel3)
+
+prp(CARTmodel3)
 ```
 
+
+## Problem 3.1 - Interaction Terms
+
+We know trees can handle "nonlinear" relationships, e.g. "in the 'Civic Duty' group and female", but as we will see in the next few questions, it is possible to do the same for logistic regression. First, let's explore what trees can tell us some more.
+
+Let's just focus on the "Control" treatment group. Create a regression tree using just the "control" variable, then create another tree with the "control" and "sex" variables, both with cp=0.0.
+
+In the "control" only tree, what is the absolute value of the difference in the predicted probability of voting between being in the control group versus being in a different group? You can use the absolute value function to get answer, i.e. abs(Control Prediction - Non-Control Prediction). Add the argument "digits = 6" to the prp command to get a more accurate estimate.
 
 ```{r}
 
+CARTmodel4 = rpart(voting ~ control, data = voters, cp=0.0)
+prp(CARTmodel4, digits = 6)
+abs(0.296638-0.34)
+CARTmodel5 = rpart(voting ~ control + sex, data = voters, cp=0.0)
+prp(CARTmodel5, digits = 6)
+abs(0.345818-0.334176)
 ```
+a: 0.043362
+
+
+## Problem 3.2 - Interaction Terms
+
+Now, using the second tree (with control and sex), determine who is affected more by NOT being in the control group (being in any of the four treatment groups):
+
+a: They are affected about the same (change in probability within 0.001 of each other).
+
+## Problem 3.3 - Interaction Terms
+
+Going back to logistic regression now, create a model using "sex" and "control". Interpret the coefficient for "sex":
+```{r}
+logSex = glm(voting ~ sex + control, data = voters, family = binomial)
+summary(logSex)
+```
+a: Coefficient is negative, reflecting that women are less likely to vote Coefficient is negative, reflecting that women are less likely to vote - correct
+
+
+## Problem 3.4 - Interaction Terms
+
+
+The regression tree calculated the percentage voting exactly for every one of the four possibilities (Man, Not Control), (Man, Control), (Woman, Not Control), (Woman, Control). Logistic regression has attempted to do the same, although it wasn't able to do as well because it can't consider exactly the joint possibility of being a women and in the control group.
+
+We can quantify this precisely. Create the following dataframe (this contains all of the possible values of sex and control), and evaluate your logistic regression using the predict function (where "LogModelSex" is the name of your logistic regression model that uses both control and sex):
+
+    
+Possibilities = data.frame(sex=c(0,0,1,1),control=c(0,1,0,1))
+predict(LogModelSex, newdata=Possibilities, type="response")
+
+  
+The four values in the results correspond to the four possibilities in the order they are stated above ( (Man, Not Control), (Man, Control), (Woman, Not Control), (Woman, Control) ). What is the absolute difference between the tree and the logistic regression for the (Woman, Control) case? Give an answer with five numbers after the decimal point.
+```{r}
+Possibilities = data.frame(sex=c(0,0,1,1),control=c(0,1,0,1))
+predict(logSex, newdata=Possibilities, type="response")
+abs(0.2908065-0.290456)
+```
+a: 0.0003505
+
+
+## Problem 3.5 - Interaction Terms
+
+
+So the difference is not too big for this dataset, but it is there. We're going to add a new term to our logistic regression now, that is the combination of the "sex" and "control" variables - so if this new variable is 1, that means the person is a woman AND in the control group. We can do that with the following command:
+
+    
+LogModel2 = glm(voting ~ sex + control + sex:control, data=gerber, family="binomial")
+
+  
+How do you interpret the coefficient for the new variable in isolation? That is, how does it relate to the dependent variable?
+```{r}
+LogModel2 = glm(voting ~ sex + control + sex:control, data=voters, family="binomial")
+summary(LogModel2)
+```
+
+
+
+## Problem 3.6 - Interaction Terms
+
+
+Run the same code as before to calculate the average for each group:
+
+predict(LogModel2, newdata=Possibilities, type="response")
+
+Now what is the difference between the logistic regression model and the CART model for the (Woman, Control) case? Again, give your answer with five numbers after the decimal point.
 
 
 ```{r}
-
+predict(LogModel2, newdata=Possibilities, type="response")
+abs(0.290456-0.2904558)
 ```
+a: 2e-07
 
 
-```{r}
+## Problem 3.7 - Interaction Terms
 
-```
+This example has shown that trees can capture nonlinear relationships that logistic regression can not, but that we can get around this sometimes by using variables that are the combination of two variables. Should we always include all possible interaction terms of the independent variables when building a logistic regression model?
 
-
-```{r}
-
-```
-
-
+a: no
 ```{r}
 
 ```
